force-app/main/default/objects/OrgToMonitor__mdt/OrgToMonitor__mdt.object-meta.xml
<CustomObject>
    <description>This Metadata contains the list of all orgs you want to monitor</description>
    <label>OrgToMonitor</label>
    <pluralLabel>OrgsToMonitor</pluralLabel>
</CustomObject>