force-app/main/default/objects/OrgToMonitor__mdt/fields/apiVersion__c.field-meta.xml
<CustomField>
    <fullName>apiVersion__c</fullName>
    <label>Version API</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>