force-app/main/default/objects/OrgToMonitor__mdt/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
                <default>true</default>
                <label>B2B</label>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>