force-app/main/default/objects/OrgToMonitor__mdt/fields/DisplayObsoleteLoginUsers__c.field-meta.xml
<CustomField>
    <fullName>DisplayObsoleteLoginUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DisplayObsoleteLoginUsers</label>
    <type>Checkbox</type>
</CustomField>