force-app/main/default/objects/OrgToMonitor__mdt/fields/ObsoleteUserDelay__c.field-meta.xml
<CustomField>
    <fullName>ObsoleteUserDelay__c</fullName>
    <label>ObsoleteUserDelay</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>