force-app/main/default/objects/OrgToMonitor__mdt/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>This is the unique OrgId of the Org to Monitor</description>
    <label>Org ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>