force-app/main/default/objects/OrgToMonitor__mdt/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <description>This is the Name of the Org</description>
    <label>Domain Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>