force-app/main/default/objects/OrgToMonitor__mdt/fields/OrgCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OrgCreatedDate__c</fullName>
    <description>Date of creation of the Org</description>
    <inlineHelpText>Creation date of the Organization</inlineHelpText>
    <label>OrgCreatedDate</label>
    <type>Date</type>
</CustomField>